<resources>
    <string name="app_name">Investlator</string>
    <string name="welcome">Welcome</string>
    <string name="register">Register</string>
    <string name="continue_as_anonymous">Continue as anonymous</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="next">Next</string>
    <string name="phone">Phone Number</string>
    <string name="enter_your_number">Number</string>
    <string name="done">Done</string>
    <string name="menu">Menu</string>
    <string name="calculator">Calculator</string>
    <string name="tips">Tips</string>
    <string name="support">Support</string>
    <string name="privacy">Privacy</string>
    <string name="log_out">Log Out</string>
    <string name="stay_disciplined_and_avoid_making_investment_decisions_based_on_fear_greed_or_other_emotions_instead_focus_on_your_long_term_investment_strategy_and_remain_patient_and_consistent">Stay disciplined and avoid making investment decisions based on fear, greed, or other emotions. Instead, focus on your long-term investment strategy and remain patient and consistent.</string>
    <string name="avoid_emotional_investing">Avoid emotional investing</string>
    <string name="don_t_put_all_your_eggs_in_one_basket_and_manage_risk_through_diversification_and_asset_allocation">Don\'t put all your eggs in one basket and manage risk through diversification and asset allocation.</string>
    <string name="manage_risk">Manage risk</string>
    <string name="invest_in_what_you_know">Invest in what you know</string>
    <string name="stick_to_investments_that_you_understand_and_have_a_strong_knowledge_of_rather_than_chasing_hot_trends_or_fads">Stick to investments that you understand and have a strong knowledge of, rather than chasing hot trends or fads.</string>
    <string name="monthly_invest">Monthly\ninvest</string>
    <string name="yearly_invest">Yearly\nInvest</string>
    <string name="risk_investment">Risk\ninvestment</string>
    <string name="your_profit_graphic">Your profit\n(graphic)</string>
    <string name="simple">Simple\n%</string>
    <string name="compound">Compound\n%</string>
    <string name="investment">Investment</string>
    <string name="period">Period</string>
    <string name="m">M</string>
    <string name="y">Y</string>
    <string name="percent">Percent</string>
    <string name="percent_type">Percent Type</string>
    <string name="s">S</string>
    <string name="c">C</string>
    <string name="calculate">Calculate</string>
    <string name="_100">100</string>
    <string name="current_c_u">Current (C.U)</string>
    <string name="investment_c_u">Investment(C.U)</string>
    <string name="profit">Profit (%)</string>
    <string name="profit_c_u">Profit (c.u)</string>
    <string name="your_profit">Your Profit</string>
    <string name="all_fields_must_be_filled">All fields must be filled!</string>
    <string name="check_if_the_number_is_correct">Check if the number is correct</string>
    <string name="profit_text">%s%%</string>
    <string name="profit_cu_text">%s$</string>
    <string name="investment_text">%s$</string>
    <string name="current_text">%s$</string>
</resources>