<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context=".support.SupportActivity">

    <TextView
        android:id="@+id/tv_support"
        style="@style/Text.Header"
        android:text="@string/support"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:drawablePadding="16dp"
        app:drawableStartCompat="@drawable/ic_support_black" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="32dp"
        app:layout_constraintTop_toBottomOf="@id/tv_support"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/layout_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
    <LinearLayout
        android:id="@+id/layout_avoid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:padding="26dp"
        android:background="@drawable/restangle"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_support">

        <TextView
            android:text="@string/avoid_emotional_investing"
            style="@style/Text.Main"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/stay_disciplined_and_avoid_making_investment_decisions_based_on_fear_greed_or_other_emotions_instead_focus_on_your_long_term_investment_strategy_and_remain_patient_and_consistent"
            style="@style/Text.Desc"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_manage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="32dp"
        android:padding="26dp"
        android:background="@drawable/restangle"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_avoid">

        <TextView
            android:text="@string/manage_risk"
            style="@style/Text.Main"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/don_t_put_all_your_eggs_in_one_basket_and_manage_risk_through_diversification_and_asset_allocation"
            style="@style/Text.Desc"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="30dp"
    android:layout_marginTop="32dp"
    android:padding="26dp"
    android:background="@drawable/restangle"
    android:orientation="vertical"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/layout_manage">

    <TextView
        android:text="@string/invest_in_what_you_know"
        style="@style/Text.Main"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/stick_to_investments_that_you_understand_and_have_a_strong_knowledge_of_rather_than_chasing_hot_trends_or_fads"
        style="@style/Text.Desc"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>