<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context=".registration.RegistrationPhoneActivity">

    <TextView
        android:id="@+id/tv_welcome"
        style="@style/Text.Header"
        android:text="@string/registration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/restangle"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/Text.Main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:text="@string/phone"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="32dp"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/input_ed"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="@color/white"
            android:hint="@string/enter_your_number"
            android:textColorHint="@color/white"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ed_phone"
                android:fontFamily="@font/ff_montserrat_bold"
                android:gravity="end"
                android:inputType="phone"
                android:textAlignment="textEnd"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.hbb20.CountryCodePicker
            app:ccp_showArrow="false"
            app:layout_constraintBottom_toBottomOf="@id/input_ed"
            app:layout_constraintTop_toTopOf="@id/input_ed"
            app:layout_constraintStart_toStartOf="@id/input_ed"
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:paddingTop="6dp"
            app:ccp_autoDetectCountry="true"
            app:ccp_autoDetectLanguage="true"
            app:ccp_contentColor="@color/white"
            app:ccp_showNameCode="false"
            app:ccp_textSize="16dp"
             />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/Button"
            android:id="@+id/btn_done"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/light_naked"
            android:paddingVertical="12dp"
            android:text="@string/done"
            android:textColor="@color/black"
            android:textSize="16sp" />


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_anonymous"
        style="@style/Button"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/black"
        android:padding="16dp"
        android:text="@string/continue_as_anonymous"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>