<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context=".calculator.two.CalculateTwoActivity">

    <TextView
        android:id="@+id/tv_calculator"
        style="@style/Text.Header"
        android:drawablePadding="16dp"
        android:text="@string/calculator"
        app:drawableStartCompat="@drawable/ic_calculator_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/restangle"
        android:orientation="vertical"
        android:padding="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_percent" />

        <TextView
            style="@style/Text.Main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:text="@string/percent"
            android:textColor="@color/white"
            android:textSize="26sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_ed_percent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/percent"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_percent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ff_montserrat_regular"
                android:inputType="number"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="32dp"
            android:background="@color/white" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_percent_type" />

        <TextView

            style="@style/Text.Main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:text="@string/percent_type"
            android:textColor="@color/white"
            android:textSize="26sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">


            <TextView
                android:id="@+id/ed_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/percent_type"
                android:fontFamily="@font/ff_montserrat_regular"
                android:padding="18dp"
                android:text="@string/percent_type"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_simple"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:background="@drawable/radio_btn"
                android:fontFamily="@font/ff_montserrat_bold"
                android:text="@string/s"
                android:textColor="@color/white"
                android:textSize="26sp"
                app:layout_constraintBottom_toBottomOf="@id/ed_type"
                app:layout_constraintEnd_toEndOf="@id/ed_type"
                app:layout_constraintTop_toTopOf="@id/ed_type" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_c"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:background="@drawable/radio_btn"
                android:fontFamily="@font/ff_montserrat_bold"
                android:text="@string/c"
                android:textColor="@color/white"
                android:textSize="26sp"
                app:layout_constraintBottom_toBottomOf="@id/ed_type"
                app:layout_constraintEnd_toStartOf="@id/btn_simple"
                app:layout_constraintTop_toTopOf="@id/ed_type" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_calculate"
        style="@style/Button"
        android:layout_marginVertical="32dp"
        android:backgroundTint="@color/black"
        android:padding="16dp"
        android:text="@string/calculate"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_calculate" />

</androidx.constraintlayout.widget.ConstraintLayout>